# libtaskd

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  NEWS  README  cmake.h.in
doc/: CMakeLists.txt
doc/man/: libtaskd.3  libtaskd.3.in
example/: .gitignore  Makefile  README  add.c  client.c
src/: CMakeLists.txt  Msg.cpp  Msg.h  TLSClient.cpp  TLSClient.h  api.cpp  ssl.cpp  taskd.cpp  taskd.h  text.cpp  text.h
test/: .gitignore  CMakeLists.txt  msg.t.cpp  sample.t.cpp  test.cpp  test.h
